utils/landing-page/style.css
@font-face {
    font-family: "Aeonik";
    src: url("assets/Aeonik-Regular.otf") format("opentype");
}

@font-face {
    font-family: "Aeonik";
    font-style: normal;
    font-weight: 500;
    src: url("assets/Aeonik-Medium.otf") format("opentype");
}

@font-face {
    font-family: "Aeonik";
    font-style: normal;
    font-weight: 700;
    src: url("assets/Aeonik-Bold.otf") format("opentype");
}

:root {
    --swm-popcorn-blue: #001a72;
    --swm-popcorn-yellow: #fffae1;
    --swm-popcorn-pink-60: #ffa3a1;
    --swm-popcorn-pink-80: #fa7f7c;
    --swm-popcorn-white: #fff;
    --swm-popcorn-black: #0d1116;

    --swm-header: var(--swm-popcorn-blue);
    --swm-text: var(--swm-popcorn-black);
    --swm-background: var(--swm-popcorn-white);
    /* --swm-background: #fcfcff; */
    /* --swm-yellow-100: #ffd61e; */
    /* --swm-red-100: #ff6259; */
    /* --swm-green-100: #57b495; */
    /* --swm-blue-100: #38acdd; */
}

@media (prefers-color-scheme: dark) {
    :root {
        --swm-popcorn-blue: #001a72;
        --swm-popcorn-yellow: #fffae1;
        --swm-popcorn-pink-60: #ffa3a1;
        --swm-popcorn-pink-80: #fa7f7c;
        --swm-popcorn-white: #fff;
        --swm-popcorn-black: #212121;

        --swm-header: var(--swm-popcorn-yellow);
        --swm-text: var(--swm-popcorn-white);
        --swm-background: var(--swm-popcorn-black);
        /* --swm-background: #232736; */
        /* --swm-yellow-100: #fd4; */
        /* --swm-red-100: #ff7774; */
        /* --swm-green-100: #3fc684; */
        /* --swm-blue-100: #00a9f0; */
    }
}

main {
    margin: 0 auto;
    padding: 0 30px;
    max-width: 60em;
}

body {
    margin: 15px auto;
    color: var(--swm-text);
    background-color: var(--swm-background);
    font-size: 18px;
    line-height: 1.5;
    font-family:
        Aeonik,
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        Roboto,
        "Helvetica Neue",
        Arial,
        "Noto Sans",
        sans-serif,
        "Apple Color Emoji",
        "Segoe UI Emoji",
        "Segoe UI Symbol",
        "Noto Color Emoji";
}

nav {
    display: flex;
    gap: 3em;
    margin-bottom: 3em;
}

nav a {
    color: var(--swm-header);
    font-size: 1.1em;
}

section {
    scroll-margin-top: 5em;
}

a {
    color: var(--swm-text);
}

h1,
h2,
h3 {
    color: var(--swm-header);
    width: fit-content;
}

code {
    /* text-wrap: nowrap; */
}

img {
    max-width: 80vw;
}

pre {
    border-width: 2px;
    border-style: dashed;
    border-color: var(--swm-text);
    padding: 5px;
    overflow: auto;
}

summary {
    cursor: pointer;
}

.logo-full {
    padding-top: 22px;
    padding-bottom: 34px;
}

.header {
    display: flex;
    flex-direction: column;
    color: var(--swm-header);
    font-weight: 400;
    font-size: 1.5em;
}

.popcorn {
    display: inline-flex;
    align-items: baseline;
    gap: 0.5em;
}

.popcorn > span {
    color: var(--swm-header);
}

@media (prefers-color-scheme: dark) {
    .header {
        color: var(--swm-header);
    }
    .popcorn {
        color: var(--swm-background);
    }
}

.api-list {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.js-method {
    padding: 5px;
    color: var(--swm-text);
    background-color: var(--swm-popcorn-yellow);
}
@media (prefers-color-scheme: dark) {
    .js-method {
        color: var(--swm-background);
    }
}

.ex-function {
    padding: 5px;
    color: var(--swm-text);
    background-color: var(--swm-popcorn-yellow);
}
@media (prefers-color-scheme: dark) {
    .ex-function {
        color: var(--swm-background);
    }
}

.examples {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    background-color: var(--swm-popcorn-yellow);
    padding: 60px 0;
    max-width: initial;
    width: 100vw;
    margin-left: 50%;
    transform: translateX(-50%);
}

@media (prefers-color-scheme: dark) {
    .examples {
        background-color: var(--swm-popcorn-pink-60);
    }
}

.example {
    max-width: 400px;
    max-height: 400px;
    background-color: var(--swm-popcorn-pink-60);
    padding: 10px;
}

@media (prefers-color-scheme: dark) {
    .example {
        background-color: var(--swm-popcorn-black);
    }
}

.preview-img {
    max-width: 400px;
    max-height: 400px;
}

@media screen and (max-width: 600px) {
    .preview-img {
        max-width: 300px;
        max-height: 300px;
    }
}

.unselectable {
    pointer-events: none;
    user-select: none;
}

.note {
    background-color: var(--swm-popcorn-pink-80);
    padding: 15px;
}

.note * {
    color: var(--swm-text);
}
@media (prefers-color-scheme: dark) {
    .note * {
        color: var(--swm-background);
    }
}

.arch {
    height: 400px;
}
/*
.links {
    display: flex;
    gap: 2em;
}
.links a {
    padding: 5px;
    flex-grow: 1;
    border: none;
} */

